--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -29,7 +29,8 @@ const translatePath = useTranslatedPath(lang);
 						<a
 							class="flex h-10 w-full max-w-52 flex-1 items-center justify-center px-4 py-2 text-xl text-slate-200 transition-all hover:text-white sm:w-auto md:font-bold lg:h-10"
 							aria-label="Contact Page"
-							href={translatePath("/contact/")}>
+							href="https://qm.qq.com/q/8ShudcdYt2"
+							target="_blank">
 							{t("contact")}
 						</a>
 					</div>
