--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -8,60 +8,38 @@ const t = useTranslations(lang);
 const translatePath = useTranslatedPath(lang);
 ---
 
-<footer class="section min-h-screen gap-y-10 py-3 lg:gap-y-32">
-	<div class="relative flex-grow"></div>
-	<div class="relative grid grid-cols-6 gap-y-20 lg:grid-cols-12 lg:text-xl">
-		<div class="col-span-6 col-start-1 grid grid-cols-6 gap-6 lg:col-span-8">
-			<div class="col-span-2 col-start-4 flex flex-col gap-2 lg:col-span-3">
-				<a href="https://twitter.com//" target="_blank">Twitter / X</a>
-				<a href="https://www.instagram.com//" target="_blank">Instagram</a>
-				<a href="https://www.linkedin.com/" target="_blank">Linkedin</a>
-				<a href="https://tiktok.com/" target="_blank">TikTok</a>
-			</div>
-			<div class="col-span-3 row-start-1 lg:col-span-2 lg:col-start-4 lg:row-start-auto">
-				<div class="flex flex-col gap-2">
-					<a href={translatePath("/")}>Home</a>
-					<a href={translatePath("/blog/")}>Blog</a>
-					<a href={translatePath("/tags/")}>Tags</a>
-					<a href={translatePath("/contact/")}>{t("contacts")}</a>
-					<a href={translatePath("/terms/")}>Terms</a>
-					<a href={translatePath("/privacy/")}>Privacy Policy</a>
-					<a href={translatePath("/rss.xml")}>RSS</a>
-				</div>
-			</div>
-			<div class="col-span-3 mt-10 lg:col-start-4">
-				<div class="relative flex flex-col overflow-hidden"></div>
-				<div class="relative mt-1 flex h-8 flex-col overflow-hidden">
-					<a href="mailto:test@mintaka.co" class="block cursor-pointer overflow-hidden">test@mintaka.co</a>
-				</div>
+<footer class="section gap-y-10 py-3 lg:gap-y-32">
+	<div class="relative mt-4 flex w-full items-center justify-between ...">
+		<div class="flex flex-col">
+			<div>©2025 Triluminous Club</div>
+			<div>
+				Developed by 
+				<a href="https://merlette.pages.dev/" target="_blank" class="hover:underline">Merlette</a>.
 			</div>
 		</div>
-		<div class="col-span-6 row-start-1 text-5xl leading-tight lg:col-span-4 lg:row-start-auto lg:text-6xl">
-			<!-- Newsletter Section -->
-			<div>{t("footer.newsletter")}</div>
-			<div>{t("footer.newsletter2")}</div>
-			<Newsletter />
+		<div class="flex items-center gap-x-4">
+			<div>
+				Powered by 
+				<a href="https://github.com/majesticooss/mintaka" target="_blank" class="hover:underline">Mintaka</a>.
+			</div>
+			<button
+				id="go-top-button"
+				aria-label="Go to Top"
+				class="fill-transparent transition-colors duration-300 hover:fill-black hover:text-white"
+				data-cursor-hover
+				data-cursor-parallax>
+				<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+					<g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
+						<circle cx="12" cy="12" r="9"></circle>
+						<path d="m15 12l-3-3m0 0l-3 3m3-3v6"></path>
+					</g>
+				</svg>
+			</button>
 		</div>
-	</div>
-	<div class="relative mt-4 flex w-full items-end justify-between gap-y-4 text-sm lg:text-xl lg:font-normal">
-		<div>©2023 YOUR COMPANY</div>
-		<!-- https://codepen.io/fliseno1k/pen/WNboLBy -->
-		<button
-			id="go-top-button"
-			aria-label="Go to Top"
-			class="fill-transparent transition-colors duration-300 hover:fill-black hover:text-white"
-			data-cursor-hover
-			data-cursor-parallax>
-			<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
-				<g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
-					<circle cx="12" cy="12" r="9"></circle><path d="m15 12l-3-3m0 0l-3 3m3-3v6"></path>
-				</g>
-			</svg>
-		</button>
-
-		<!-- Scroll Up Arrow -->
 	</div>
 </footer>
+
+
 
 <style>
 	footer {
