--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -7,7 +7,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 export async function getStaticPaths() {
 	const allPosts = (await getCollection("posts")).filter((post) => {
 		const [postLang, ...slug] = post.slug.split("/");
-		return postLang === "en";
+		return postLang === "cn";
 	});
 
 	const uniqueTags = [...new Set(allPosts.flatMap((post) => post.data.tags))];
