--- a/src/components/landing/Faq.astro
+++ b/src/components/landing/Faq.astro
@@ -124,7 +124,8 @@ const faqs = [
 		<div class="faq-contact-us-button squircle-bg-white rounded-lg bg-zinc-200 opacity-0 sm:ml-44" data-cursor-hover data-cursor-parallax>
 			<a
 				class="flex h-10 w-full max-w-52 flex-1 items-center justify-center px-4 py-2 text-xl text-zinc-900 transition-all hover:text-black sm:w-auto md:font-bold lg:h-10"
-				href={translatePath("/contact/")}>
+				href="https://qm.qq.com/q/8ShudcdYt2"
+				target="_blank">
 				{t("contactus")}
 			</a>
 		</div>
