--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -45,7 +45,7 @@ const { pathname } = Astro.url;
 <header>
 	<a href={translatePath("/")} aria-label="Home" class="logo absolute z-50 flex h-[4.5rem] items-center md:h-[5.9rem]">
 		<img
-    src="/logo.png"
+    src="/logo.webp"
     alt="logo"
   class="logo-img h-7 w-36 md:h-9"
 />
