--- a/src/pages/en/blog/index.astro
+++ b/src/pages/en/blog/index.astro
@@ -7,9 +7,9 @@ const seo: AstroSeoProps = {
 	title: "Mintaka Studio Blog: Insights and Updates in Web Design, Web dev and SEO",
 	description:
 		"Explore the Mintaka Studio Blog for the latest trends, tips, and insights in web design, web dev and SEO. Stay updated with our innovative digital solutions.",
-	canonical: "https://mintaka.co/it/blog/",
+	canonical: "https://mintaka.co/en/blog/", // 修正：将 it 改为 en
 	openGraph: {
-		url: "https://mintaka.co/blog",
+		url: "https://mintaka.co/en/blog", // 修正：添加 en 前缀
 		title: "Mintaka Studio Blog: Insights and Updates in Web Design, Web dev and SEO",
 		description:
 			"Stay informed with the latest in web design and SEO on the Mintaka Studio Blog. Expert advice, tips, and industry insights await you.",
