--- a/src/pages/en/blog/[...slug].astro
+++ b/src/pages/en/blog/[...slug].astro
@@ -11,7 +11,7 @@ export async function getStaticPaths() {
 			const [lang, ...slug] = entry.slug.split("/");
 			return { params: { lang, slug: slug.join("/") || undefined }, props: entry };
 		})
-		.filter((entry) => entry.params.lang === "it");
+		.filter((entry) => entry.params.lang === "en");
 }
 
 const entry = Astro.props;
@@ -20,7 +20,7 @@ const { Content } = await entry.render();
 const seo: AstroSeoProps = {
 	title: entry.data.title,
 	description: entry.data.description,
-	canonical: `https://mintaka.co/it/blog/${entry.slug}/`,
+	canonical: `https://mintaka.co/en/blog/${entry.slug}/`,
 	openGraph: {
 		url: entry.slug,
 		title: entry.data.title,
