--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -20,7 +20,7 @@ const { Content } = await entry.render();
 const seo: AstroSeoProps = {
 	title: entry.data.title,
 	description: entry.data.description,
-	canonical: `https://mintaka.co/blog/${entry.slug}/`,
+	canonical: `https://mintaka.co/blog/${entry.slug}/`, // 中文路径不需要语言前缀
 	openGraph: {
 		url: entry.slug,
 		title: entry.data.title,
