--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,38 +4,36 @@ import type { AstroSeoProps } from "@astrolib/seo";
 import Articles from "@components/blog/Articles.astro";
 
 const seo: AstroSeoProps = {
-	title: "Majestico Studio Blog: Insights and Updates in Web Design, Web dev and SEO",
-	description:
-		"Explore the Majestico Studio Blog for the latest trends, tips, and insights in web design, web dev and SEO. Stay updated with our innovative digital solutions.",
-	canonical: "https://mintaka.co/blog/",
+	title: "三明学社博客",
+	description: "探索三明学社的文化传承与艺术创新",
+	canonical: "https://triluminous.pages.dev/blog/",
 	openGraph: {
-		url: "https://mintaka.co/blog",
-		title: "Majestico Studio Blog: Insights and Updates in Web Design, Web dev and SEO",
-		description:
-			"Stay informed with the latest in web design and SEO on the Majestico Studio Blog. Expert advice, tips, and industry insights await you.",
+		url: "https://triluminous.pages.dev/blog",
+		title: "三明学社博客 - 传统文化的现代传承",
+		description: "在三明学社博客，探索传统文化的魅力，了解艺术创新的动态。",
 		images: [
 			{
-				url: "https://mintaka.co/opengraph/social-og.jpg",
+				url: "https://triluminous.pages.dev/opengraph/social-og.jpg",
 				width: 1200,
 				height: 630,
-				alt: "Social open graph image of Majestico Studio Blog",
+				alt: "三明学社博客分享图片",
 				type: "image/jpeg",
 			},
 			{
-				url: "https://mintaka.co/opengraph/twitter-og.jpg",
+				url: "https://triluminous.pages.dev/opengraph/twitter-og.jpg",
 				width: 4096,
 				height: 4096,
-				alt: "Twitter open graph image of Majestico Studio Blog",
+				alt: "三明学社博客推特分享图片",
 				type: "image/jpeg",
 			},
-			{ url: "https://mintaka.co/opengraph/social-og.jpg" },
-			{ url: "https://mintaka.co/opengraph/twitter-og.jpg" },
+			{ url: "https://triluminous.pages.dev/opengraph/social-og.jpg" },
+			{ url: "https://triluminous.pages.dev/opengraph/twitter-og.jpg" },
 		],
-		site_name: "Majestico Studio",
+		site_name: "三明学社",
 	},
 	twitter: {
-		handle: "@majesticostudio",
-		site: "@majesticostudio",
+		handle: "@triluminous",
+		site: "@triluminous",
 		cardType: "summary_large_image",
 	},
 };
