--- a/src/components/blog/Tag.astro
+++ b/src/components/blog/Tag.astro
@@ -6,7 +6,7 @@ import Title from "@components/global/Title.astro";
 
 interface Props {
 	tag: string;
-	posts: CollectionEntry<"posts">;
+	posts: CollectionEntry<"posts">[];
 }
 
 const { tag, posts } = Astro.props as Props;
@@ -19,16 +19,17 @@ const { tag, posts } = Astro.props as Props;
 		</div>
 		<ul class="mt-12 grid grid-cols-1 gap-x-3 gap-y-24 sm:grid-cols-2 lg:mt-24 lg:grid-cols-3 lg:gap-x-6">
 			{
-				posts.map((post) => (
-					<EntriesOne
-						url={"/blog/" + post.slug}
-						title={post.data.title}
-						description={post.data.description}
-						alt={post.data.title}
-						pubDate={post.data.pubDate.toString().slice(0, 10)}
-						author={post.data.author}
-						image={post.data.image.source}
-					/>
+				posts.map((post: CollectionEntry<"posts">, idx) => (
+					<li key={post.slug ?? idx}>
+						<EntriesOne
+							url={"/blog/" + post.slug}
+							title={post.data.title}
+							description={post.data.description}
+							alt={post.data.title}
+							pubDate={post.data.pubDate.toString().slice(0, 10)}
+							image={post.data.image.source}
+						/>
+					</li>
 				))
 			}
 		</ul>
