--- a/src/components/blog/Tag.astro
+++ b/src/components/blog/Tag.astro
@@ -28,7 +28,7 @@ const { tag, posts } = Astro.props as Props;
 							title={post.data.title}
 							description={post.data.description}
 							alt={post.data.title}
-							pubDate={post.data.pubDate.toString().slice(0, 10)}
+							pubDate={post.data.pubDate}
 							image={post.data.image.source}
 						/>
 					</li>
