--- a/src/components/blog/Articles.astro
+++ b/src/components/blog/Articles.astro
@@ -21,7 +21,13 @@ const allPosts = (await getCollection("posts"))
 			slug: slug,
 		};
 	})
-	.sort((a, b) => Number(b.data.pubDate) - Number(a.data.pubDate));
+	.sort((a, b) => {
+		// history 特殊处理
+		if (a.data.order === 1) return -1;
+		if (b.data.order === 1) return 1;
+		// 其他全部按 pubDate 倒序
+		return b.data.pubDate.getTime() - a.data.pubDate.getTime();
+	});
 ---
 
 <section>
@@ -43,7 +49,7 @@ const allPosts = (await getCollection("posts"))
 					title={allPosts[0].data.title}
 					description={allPosts[0].data.description}
 					alt={allPosts[0].data.title}
-					pubDate={allPosts[0].data.pubDate.toString().slice(0, 10)}
+					pubDate={allPosts[0].data.pubDate}
 					image={allPosts[0].data.image.source}
 					titleInside={false}
 				/>
@@ -60,7 +66,7 @@ const allPosts = (await getCollection("posts"))
 							title={post.data.title}
 							description={post.data.description}
 							alt={post.data.title}
-							pubDate={post.data.pubDate.toString().slice(0, 10)}
+							pubDate={post.data.pubDate}
 							image={post.data.image.source}
 						/>
 					))
