--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import { GoogleAnalytics } from 'astro-analytics';
 ---
 
 <meta name="viewport" content="width=device-width" />
@@ -52,3 +53,5 @@ import "../styles/global.css";
 		CSS.paintWorklet.addModule("https://www.unpkg.com/css-houdini-squircle@0.3.0/squircle.min.js");
 	}
 </script>
+
+<GoogleAnalytics id="G-3R684T9CBE" />
